# conan

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONCEPT.md  DEPLOY.md  Dockerfile.astra-test  Dockerfile.grpc-tc-mirror  Dockerfile.grpc-test  Dockerfile.gtest-test  Dockerfile.zlib-test  README.md  STEP_BY_STEP.md  TEST_ON_WINDOWS_PC.md  build_test.bat  build_test_legacy.bat  docker-compose.yml  server.conf  setup.bat
abseil/: conanfile.py
c-ares/: conanfile.py
example/: CMakeLists.txt  conanfile.py  conanfile.txt
example/src/: example.cpp  example_test.cpp
extensions/deployers/: legacy_nupkg.py
grpc/: conanfile.py
gtest/: conandata.yml  conanfile.py
openssl/: conanfile.py
packages-linux/: patch_ng-1.18.1-py3-none-any.whl  patch_ng-1.19.1-py3-none-any.whl
profiles/: astra-gcc  lin-gcc-aarch64-linaro  lin-gcc75-arm-linaro  lin-gcc84-i686  lin-gcc84-x86_64  linux-gcc  linux-gcc-debug  win-v142-x64  win-v142-x86  win-v143-x64  windows-msvc  windows-msvc-debug
profiles/toolchains/: linaro-aarch64.cmake  linaro-arm.cmake
protobuf/: conanfile.py
re2/: conanfile.py
teamcity/: build-all.sh  build-matrix.sh  build-recipe.sh  package-legacy.py
test-astra/: HELP.txt  NEXT_STEPS.md  README.md  install_deps.sh  run_grpc.sh  run_gtest.sh  run_test.sh  run_test_grpc.sh  run_test_zlib.sh  run_zlib.sh  setup.sh  test_all_profiles.sh  test_arm_cross.sh
test-windows/: install_deps.bat  run_grpc.bat  run_gtest.bat  run_test.bat  run_test_grpc.bat  run_test_zlib.bat  run_zlib.bat  setup.bat
tools/windows/: README.md
zlib/: conandata.yml  conanfile.py
(+1 files in other folders)
